Fix nav-tabs border in dark mode

--- a/nautobot/project-static/css/dark.css
+++ b/nautobot/project-static/css/dark.css
@@ -80,9 +80,19 @@ html[data-theme="dark"] .CodeMirror-gutters {              /* GraphiQL primary b
   background-color: rgb(217, 217, 217) !important;
 }
 
-/* Preserve blue text color on selected tabs */
-html[data-theme="dark"] .nav-tabs>li.active>a {
-  color: rgb(72, 133, 204);
+/* Preserve border line across bottom of tabs row */
+html[data-theme="dark"] .nav-tabs {
+  border-bottom: 1px solid rgb(100, 100, 100);
+}
+
+/* Preserve border lines around active tab in tabs row */
+html[data-theme="dark"] .nav-tabs>li.active>a,
+html[data-theme="dark"] .nav-tabs>li.active>a:focus,
+html[data-theme="dark"] .nav-tabs>li.active>a:hover {
+  border: 1px solid rgb(100, 100, 100);                 /* Border left/top/right around active tab */
+  border-bottom-color: transparent;                       /* Hides bottom border for active tab */
+  border-radius: 6px 6px 0 0;                             /* Rounds top border corners of active tab */
+  background-color: rgb(217, 217, 217) !important;      /* Blends active tab with background */
 }
 
 /* Swagger API Docs */
